# yokoten

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
yokoten/: config.yaml.default  main.py
yokoten/template/: report.html
