[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yokoten"
version = "0.1.0"
description = "Yokotenkai tool"
authors = [{ name = "sasanquaneuf", email = "sasanquaneuf@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    'PyYAML',
    'google-generativeai',
    'vertexai',
    'boto3',
    'openai',
]
keywords = ["llm", "refactoring", "grep", "automation"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control :: Git",
]
readme = {file = "README.md", content-type = "text/markdown"}

[project.scripts]
yokoten = "yokoten.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"yokoten" = [
    "config.yaml.default",
    "template/report.html",
]
